--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <main class="Main">
       <header class="Header" id="header"></header>
       <section id="content">
-        <div class="loading">aqui</div>
+        <div class="loading"></div>
       </section>
     </main>
   </body>
